--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,6 +1,7 @@
 pyyaml
 pandas
 gitpython
+lxml
 ruamel.yaml>=0.15
 git+git://github.com/dougmet/yamlmd
 git+git://github.com/open-sdg/sdg-build@0.4.1
