--- a/open_sdg_config_sdmx.yml
+++ b/open_sdg_config_sdmx.yml
@@ -25,9 +25,11 @@ inputs:
       UNIT_MEASURE: 'Units'
       SERIES: 'Series'
       REF_AREA|KG: ''
-    drop_dimensions: SOURCE_DETAIL
+    drop_dimensions:
+      - SOURCE_DETAIL
+      - COMMENT_OBS
     dsd: 'https://raw.githubusercontent.com/sdg-kyrgyzstan/open-sdg-data-starter/develop/SDG_DSD.KG.1.6.xml'
-    import_translation_keys: true
+    import_codes: true
   - class: InputCsvData
     path_pattern: data/*-*.csv
   - class: InputYamlMdMeta
@@ -57,6 +59,10 @@ translations:
     source: translations
   - class: TranslationInputSdmx
     source: 'https://raw.githubusercontent.com/sdg-kyrgyzstan/open-sdg-data-starter/develop/SDG_DSD.KG.1.6.xml'
+    dimension_map:
+      UNIT_MEASURE: 'Units'
+      SERIES: 'Series'
+      REF_AREA|KG: ''
 
 # Destination directory
 # ---------------------
